# fhnw-prcpp-jni

./: README.md
c++/: CMakeLists.txt  Matrix.cpp  Test.h  main.cpp
java/: Matrix.h  libNativeFunctions.jnilib  libNativeMatrix.jnilib
java/src/: Main.java  Matrix.java  Test.java
